force-app/main/default/objects/PBIS_Target__c/PBIS_Target__c.object-meta.xml
<CustomObject>
    <description>Primary PBIS per-user/period target (Layer 3). Wide row imported via the Data Import Wizard: identity/period + up to 10 component (S&amp;D Parameter) weightages and targets. Achievement/incentive computed in Task 4.</description>
    <label>PBIS Target</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>PBIS Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBIS Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>