force-app/main/default/objects/PBIS_Target__c/fields/Component_10_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Component_10_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>S&amp;D Parameter for component 10. Matched on import by the parameter External Id.</inlineHelpText>
    <label>Component 10 Parameter</label>
    <referenceTo>S_D_Parameter__c</referenceTo>
    <relationshipLabel>PBIS Targets (Component 10)</relationshipLabel>
    <relationshipName>PBIS_Targets_Comp_10</relationshipName>
    <type>Lookup</type>
</CustomField>