force-app/main/default/objects/PBIS_Target__c/fields/Component_1_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Component_1_Achievement__c</fullName>
    <inlineHelpText>Computed in Task 4 from the parameter SOQL.</inlineHelpText>
    <label>Component 1 Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>