force-app/main/default/objects/PBIS_Target__c/fields/Component_1_Qualified_Slab__c.field-meta.xml
<CustomField>
    <fullName>Component_1_Qualified_Slab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Slab matched for component 1 in Task 4.</inlineHelpText>
    <label>Component 1 Qualified Slab</label>
    <referenceTo>PBIS_Incentive_Slab__c</referenceTo>
    <relationshipLabel>PBIS Targets (Component 1 Slab)</relationshipLabel>
    <relationshipName>PBIS_Targets_Comp_1_Slab</relationshipName>
    <type>Lookup</type>
</CustomField>