force-app/main/default/objects/PBIS_Target__c/fields/Component_1_Value__c.field-meta.xml
<CustomField>
    <fullName>Component_1_Value__c</fullName>
    <inlineHelpText>Incentive value for component 1, computed in Task 4.</inlineHelpText>
    <label>Component 1 Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>