force-app/main/default/objects/PBIS_Target__c/fields/Component_2_Achievement_Percent__c.field-meta.xml
<CustomField>
    <fullName>Component_2_Achievement_Percent__c</fullName>
    <inlineHelpText>Achievement / Target, computed in Task 4.</inlineHelpText>
    <label>Component 2 Achievement %</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>