force-app/main/default/objects/PBIS_Target__c/fields/Component_2_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Component_2_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>S&amp;D Parameter for component 2. Matched on import by the parameter External Id.</inlineHelpText>
    <label>Component 2 Parameter</label>
    <referenceTo>S_D_Parameter__c</referenceTo>
    <relationshipLabel>PBIS Targets (Component 2)</relationshipLabel>
    <relationshipName>PBIS_Targets_Comp_2</relationshipName>
    <type>Lookup</type>
</CustomField>