force-app/main/default/objects/PBIS_Target__c/fields/Component_2_Target__c.field-meta.xml
<CustomField>
    <fullName>Component_2_Target__c</fullName>
    <label>Component 2 Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>