force-app/main/default/objects/PBIS_Target__c/fields/Component_2_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Component_2_Weightage__c</fullName>
    <label>Component 2 Weightage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>