force-app/main/default/objects/PBIS_Target__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <formula>User__r.Title</formula>
    <label>Designation</label>
    <type>Text</type>
</CustomField>