force-app/main/default/objects/PBIS_Target__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique key for upsert via the Data Import Wizard, e.g. EMPCODE-YYYY-MM-PERIOD.</inlineHelpText>
    <label>External Id</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>