force-app/main/default/objects/PBIS_Target__c/fields/Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Gross_Salary__c</fullName>
    <label>Gross Salary</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>