force-app/main/default/objects/PBIS_Target__c/fields/Has_Mandatory_Component__c.field-meta.xml
<CustomField>
    <fullName>Has_Mandatory_Component__c</fullName>
    <formula>OR(
  Component_1_Parameter__r.Is_Mandatory__c,
  Component_2_Parameter__r.Is_Mandatory__c,
  Component_3_Parameter__r.Is_Mandatory__c,
  Component_4_Parameter__r.Is_Mandatory__c,
  Component_5_Parameter__r.Is_Mandatory__c,
  Component_6_Parameter__r.Is_Mandatory__c,
  Component_7_Parameter__r.Is_Mandatory__c,
  Component_8_Parameter__r.Is_Mandatory__c,
  Component_9_Parameter__r.Is_Mandatory__c,
  Component_10_Parameter__r.Is_Mandatory__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True when at least one selected component parameter is flagged mandatory.</inlineHelpText>
    <label>Has Mandatory Component</label>
    <type>Checkbox</type>
</CustomField>