force-app/main/default/objects/PBIS_Target__c/fields/Has_Mandatory_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Has_Mandatory_Parameter__c</fullName>
    <formula>OR(
  S_D_Parameter_1__r.Is_Mandatory__c,
  S_D_Parameter_2__r.Is_Mandatory__c,
  S_D_Parameter_3__r.Is_Mandatory__c,
  S_D_Parameter_4__r.Is_Mandatory__c,
  S_D_Parameter_5__r.Is_Mandatory__c,
  S_D_Parameter_6__r.Is_Mandatory__c,
  S_D_Parameter_7__r.Is_Mandatory__c,
  S_D_Parameter_8__r.Is_Mandatory__c,
  S_D_Parameter_9__r.Is_Mandatory__c,
  S_D_Parameter_10__r.Is_Mandatory__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True when at least one selected S&amp;D Parameter is flagged mandatory.</inlineHelpText>
    <label>Has Mandatory Parameter</label>
    <type>Checkbox</type>
</CustomField>