force-app/main/default/objects/PBIS_Target__c/fields/Incentive_Period__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Period__c</fullName>
    <label>Incentive Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Monthly</fullName><default>true</default><label>Monthly</label></value>
            <value><fullName>Quarterly</fullName><default>false</default><label>Quarterly</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>