force-app/main/default/objects/PBIS_Target__c/fields/Is_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Eligible</label>
    <type>Checkbox</type>
</CustomField>