force-app/main/default/objects/PBIS_Target__c/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <formula>ISBLANK( Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>