force-app/main/default/objects/PBIS_Target__c/fields/PBIS_Policy__c.field-meta.xml
<CustomField>
    <fullName>PBIS_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PBIS Policy</label>
    <referenceTo>PBIS_Policy__c</referenceTo>
    <relationshipName>PBIS_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>