force-app/main/default/objects/PBIS_Target__c/fields/PBIS_Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>PBIS_Policy_Name__c</fullName>
    <formula>User__r.PBIS_Policy_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PBIS Policy Name</label>
    <type>Text</type>
</CustomField>