force-app/main/default/objects/PBIS_Target__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <formula>User__r.Profile.Name</formula>
    <inlineHelpText>The user&apos;s Salesforce Profile name. Used to select the matching per-Profile incentive slabs on the policy.</inlineHelpText>
    <label>Profile</label>
    <type>Text</type>
</CustomField>