force-app/main/default/objects/PBIS_Target__c/fields/S_D_Parameter_10__c.field-meta.xml
<CustomField>
    <fullName>S_D_Parameter_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>S&amp;D Parameter 10. Matched on import by the parameter External Id.</inlineHelpText>
    <label>S &amp; D Parameter 10</label>
    <referenceTo>S_D_Parameter__c</referenceTo>
    <relationshipName>PBIS_Targets_SDP_10</relationshipName>
    <type>Lookup</type>
</CustomField>