force-app/main/default/objects/PBIS_Target__c/fields/S_D_Parameter_10_Slab__c.field-meta.xml
<CustomField>
    <fullName>S_D_Parameter_10_Slab__c</fullName>
    <inlineHelpText>Snapshot of the qualified slab band (Achievement From - To) for S&amp;D Parameter 10, captured at calculation time so it survives if the slab record is later changed or deleted.</inlineHelpText>
    <label>S &amp; D Parameter 10 Slab</label>
    <length>50</length>
    <type>Text</type>
</CustomField>