force-app/main/default/objects/PBIS_Target__c/fields/S_D_Parameter_10_Target__c.field-meta.xml
<CustomField>
    <fullName>S_D_Parameter_10_Target__c</fullName>
    <label>S &amp; D Parameter 10 Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>