force-app/main/default/objects/PBIS_Target__c/fields/S_D_Parameter_1__c.field-meta.xml
<CustomField>
    <fullName>S_D_Parameter_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>S&amp;D Parameter 1. Matched on import by the parameter External Id.</inlineHelpText>
    <label>S &amp; D Parameter 1</label>
    <referenceTo>S_D_Parameter__c</referenceTo>
    <relationshipLabel>PBIS Targets (S &amp; D Parameter 1)</relationshipLabel>
    <relationshipName>PBIS_Targets_SDP_1</relationshipName>
    <type>Lookup</type>
</CustomField>