force-app/main/default/objects/PBIS_Target__c/fields/S_D_Parameter_1_Achievement_Percent__c.field-meta.xml
<CustomField>
    <fullName>S_D_Parameter_1_Achievement_Percent__c</fullName>
    <inlineHelpText>Achievement / Target, computed in Task 4.</inlineHelpText>
    <label>S &amp; D Parameter 1 Achievement %</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>