force-app/main/default/objects/PBIS_Target__c/fields/S_D_Parameter_1_Value__c.field-meta.xml
<CustomField>
    <fullName>S_D_Parameter_1_Value__c</fullName>
    <inlineHelpText>Incentive value for S&amp;D Parameter 1, computed in Task 4.</inlineHelpText>
    <label>S &amp; D Parameter 1 Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>