force-app/main/default/objects/PBIS_Target__c/fields/S_D_Parameter_1_Weightage__c.field-meta.xml
<CustomField>
    <fullName>S_D_Parameter_1_Weightage__c</fullName>
    <label>S &amp; D Parameter 1 Weightage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>