force-app/main/default/objects/PBIS_Target__c/fields/S_D_Parameter_2_Achievement__c.field-meta.xml
<CustomField>
    <fullName>S_D_Parameter_2_Achievement__c</fullName>
    <inlineHelpText>Computed in Task 4 from the parameter SOQL.</inlineHelpText>
    <label>S &amp; D Parameter 2 Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>