force-app/main/default/objects/PBIS_Target__c/fields/S_D_Parameter_2_Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>S_D_Parameter_2_Incentive_Amount__c</fullName>
    <inlineHelpText>Incentive amount for S&amp;D Parameter 2, computed in Task 4.</inlineHelpText>
    <label>S &amp; D Parameter 2 Incentive Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>