force-app/main/default/objects/PBIS_Target__c/fields/S_D_Parameter_2_Qualified_Slab__c.field-meta.xml
<CustomField>
    <fullName>S_D_Parameter_2_Qualified_Slab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Slab matched for S&amp;D Parameter 2 in Task 4.</inlineHelpText>
    <label>S &amp; D Parameter 2 Qualified Slab</label>
    <referenceTo>PBIS_Incentive_Slab__c</referenceTo>
    <relationshipLabel>PBIS Targets (S &amp; D Parameter 2 Slab)</relationshipLabel>
    <relationshipName>PBIS_Targets_SDP_2_Slab</relationshipName>
    <type>Lookup</type>
</CustomField>