force-app/main/default/objects/PBIS_Target__c/fields/Total_Incentive_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Incentive_Value__c</fullName>
    <label>Total Incentive Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>