force-app/main/default/objects/PBIS_Target__c/fields/Total_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Total_Weightage__c</fullName>
    <formula>BLANKVALUE(Component_1_Weightage__c, 0)
+ BLANKVALUE(Component_2_Weightage__c, 0)
+ BLANKVALUE(Component_3_Weightage__c, 0)
+ BLANKVALUE(Component_4_Weightage__c, 0)
+ BLANKVALUE(Component_5_Weightage__c, 0)
+ BLANKVALUE(Component_6_Weightage__c, 0)
+ BLANKVALUE(Component_7_Weightage__c, 0)
+ BLANKVALUE(Component_8_Weightage__c, 0)
+ BLANKVALUE(Component_9_Weightage__c, 0)
+ BLANKVALUE(Component_10_Weightage__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weightage</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>