force-app/main/default/objects/PBIS_Target__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The salesperson. Mapped during import (e.g. by Username). Designation derives from this User.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>PBIS Targets</relationshipLabel>
    <relationshipName>PBIS_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>