force-app/main/default/objects/PBIS_Target__c/validationRules/Mandatory_Component_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Component_Required</fullName>
    <active>true</active>
    <description>At least one selected component must be a mandatory (value/volume gate) S&amp;D Parameter.</description>
    <errorConditionFormula>AND(
  Total_Weightage__c &gt; 0,
  NOT(Has_Mandatory_Component__c)
)</errorConditionFormula>
    <errorMessage>Include the mandatory value/volume S&amp;D parameter in at least one component.</errorMessage>
</ValidationRule>