force-app/main/default/objects/PBIS_Target__c/validationRules/Mandatory_Parameter_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Parameter_Required</fullName>
    <active>true</active>
    <description>At least one selected S&amp;D Parameter must be a mandatory (value/volume gate) parameter.</description>
    <errorConditionFormula>NOT(Has_Mandatory_Parameter__c)</errorConditionFormula>
    <errorMessage>Include the mandatory value/volume S&amp;D parameter in at least one slot.</errorMessage>
</ValidationRule>