force-app/main/default/objects/PBIS_Target__c/validationRules/S_D_Parameter_3_Requires_Target_Weightage.validationRule-meta.xml
<ValidationRule>
    <fullName>S_D_Parameter_3_Requires_Target_Weightage</fullName>
    <active>true</active>
    <description>If S &amp; D Parameter 3 is selected, its Target and Weightage are mandatory.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK( S_D_Parameter_3__c )),
  OR(
    ISBLANK( S_D_Parameter_3_Target__c ),
    ISBLANK( S_D_Parameter_3_Weightage__c )
  )
)</errorConditionFormula>
    <errorDisplayField>S_D_Parameter_3_Target__c</errorDisplayField>
    <errorMessage>Enter both Target and Weightage for S &amp; D Parameter 3.</errorMessage>
</ValidationRule>